compiler/testData/diagnostics/tests/override/AbstractVarNotImplemented.kt
abstract class A {
    abstract var i: Int
}

<!ABSTRACT_CLASS_MEMBER_NOT_IMPLEMENTED!>class B<!>() : A() {
}
